[package]
name = "PostDad"
version = "0.1.0"
edition = "2024"
description = "A high-speed, local-first Terminal UI (TUI) for testing APIs."
license = "MIT"
repository = "https://github.com/parth/PostDad"
readme = "README.md"
keywords = ["tui", "api", "rest", "http", "client"]
categories = ["command-line-utilities", "development-tools", "web-programming::http-client"]

[dependencies]
arboard = "3.6.1"
color-eyre = "0.6.5"
crossterm = "0.29.0"
hcl-rs = "0.19.4"
ratatui = { version = "0.30.0", features = ["widget-calendar", "all-widgets"] }
reqwest = "0.13.1"
serde = "1.0.228"
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
