[package]
name = "PostDad"
version = "0.2.0"
edition = "2024"
description = "A high-speed, local-first Terminal UI (TUI) for testing APIs."
license = "MIT"
repository = "https://github.com/mega123-art/PostDad"
readme = "README.md"
keywords = ["tui", "api", "rest", "http", "client"]
categories = ["command-line-utilities", "development-tools", "web-programming::http-client"]

[dependencies]
arboard = "3.6.1"
color-eyre = "0.6.5"
crossterm = "0.29.0"
hcl-rs = "0.19.4"
jsonpath_lib = "0.3.0"
rand = "0.9.2"
ratatui = { version = "0.30.0", features = ["widget-calendar", "all-widgets"] }
reqwest = { version = "0.13.1", features = ["json", "blocking", "multipart", "form"] }
serde = "1.0.228"
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
rhai = { version = "1.21", features = ["sync"] }
webbrowser = "1.0.6"
syntect = "5.3.0"
similar = "2.7.0"
